---------------------------------------------------------------------------
Version 3.21.10 [BETA] (rgerhards), 2008-12-??
- the string "Do Die" was accidently emited upon exit in non-debug mode
  This has now been corrected. Thanks to varmojfekoj for the patch.
- some legacy options were not correctly processed.
  Thanks to varmojfekoj for the patch.
- doc bugfix: v3-compatiblity document had typo in config directive
  thanks to Andrej for reporting this
---------------------------------------------------------------------------
Version 3.21.9 [BETA] (rgerhards), 2008-12-04
- re-release of 3.21.8 with an additional fix, that could also lead
  to DoS; 3.21.8 has been removed from the official download archives
- security fix: imudp emitted a message when a non-permitted sender
  tried to send a message to it. This behaviour is operator-configurable.
  If enabled, a message was emitted each time. That way an attacker could
  effectively fill the disk via this facility. The message is now
  emitted only once in a minute (this currently is a hard-coded limit,
  if someone comes up with a good reason to make it configurable, we
  will probably do that).
---------------------------------------------------------------------------
Version 3.21.8  [BETA] (rgerhards), 2008-12-04
- bugfix: imklog did not compile on FreeBSD
- security bugfix: $AllowedSender was not honored, all senders were
  permitted instead (see http://www.rsyslog.com/Article322.phtml)
- merged in all other changes from 3.20.1 (see there)
---------------------------------------------------------------------------
Version 3.21.7  [BETA] (rgerhards), 2008-11-11
- this is the new beta branch, based on the former 3.21.6 devel
- new functionality: ZERO property replacer nomatch option (from v3-stable)
---------------------------------------------------------------------------
Version 3.21.6  [DEVEL] (rgerhards), 2008-10-22
- consolidated time calls during msg object creation, improves performance