@@ -1,5 +1,8 @@
 ---------------------------------------------------------------------------
 Version 3.21.10 [BETA] (rgerhards), 2008-12-??
+- bugfix: inconsistent use of mutex/atomic operations could cause segfault
+  details are too many, for full analysis see blog post at:
+  http://blog.gerhards.net/2009/01/rsyslog-data-race-analysis.html
 - the string "Do Die" was accidently emited upon exit in non-debug mode
   This has now been corrected. Thanks to varmojfekoj for the patch.
 - some legacy options were not correctly processed.
